--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1231,7 +1231,7 @@ aside {
 }
 
 .breadcrumb-area {
-  background: rgba(0, 0, 0, 0) url("/img/inner_bg.jpg") no-repeat scroll top
+  background: rgba(0, 0, 0, 0) url("/img/breadcrumb.jpg") no-repeat scroll top
     center/cover;
 }
 
